[package]
name = "test-lib"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@resin.io>"]
license = "MIT"
build = "build.rs"

[lib]
name = "test_lib"
crate-type = ["dylib"]

[build-dependencies]

[build-dependencies.neon-build]
git = "https://github.com/abrodersen/neon"
branch = "closure"

[dependencies]
futures = "0.1"

[dependencies.neon]
git = "https://github.com/abrodersen/neon"
branch = "closure"
